# pip-split-requirements

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pip_split_requirements/: __init__.py  __main__.py  _compat.py  _req_file_parser.py  _split_requirements.py
tests/: test_main.py  test_split_requirements.py
